# learningPython

./: .gitignore  README.md
.github/workflows/: rest-dockerpush.yml  rest-tox.yml
Courses/PCAP/3_collections_lambdas/: 3.1_Defining_and_Using_Lambdas.md  3.2_Using_Collection_Functions.md  collection_processing.py
Courses/PCAP/4_if_expression/: 4.1_The_if_Operator.md  process_name.py
Courses/PCAP/5_Modules/: 5.1_Creating_using_modules.md  5.2_Importing_Modules.md  5.3_Modules_as_scripts.md  5.4_Hiding_module_entities.md  5.5_Module_search_path.md  5.6_Python_packages.md  5.7_Distributing_installing_packages.md  5.8_Docstrings_Doctests_shebangs.md
Courses/PCAP/6_Classes_OOP/: 6.1_Objects.md  6.2_Creating_classes.md  6.3_Constructors_methods_decorators.md
Courses/PCEP/10_Tuple/: 10.1_Tuples.md  10.2_Tuples_vs_list.md
Courses/PCEP/11_Dictionaries/: 11.1_Dictionaries.md  11.2_Dictinary_methods.md  using-dictionaries.py
Courses/PCEP/12_Strings/: 12.1_Strings_encodings.md  12.2_Strings_methods_1.md  (+2 more)
Training/100doors/: doors.py  test_doors.py
Training/12DaysLyrics/: lyrics.py  test_lyrics.py
Training/Rest/: .dockerignore  Dockerfile  Reame.md  main.py  requirements.txt  setup.cfg
start_nevi/: .coverage  setup.cfg
start_nevi/tests/: test_nevi.py
test_nevi/: .coverage  calc.py  requirements.txt  setup.cfg
test_nevi/Nevi_example.egg-info/: PKG-INFO  SOURCES.txt
test_nevi/coverage/: calc_py.html  coverage.xml  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_nevi_py.html  index.html  junit.xml  status.json
test_nevi/tests/: test_nevi.py
(+49 files in other folders)
