[metadata]
name = Nevi example
description = Foo
author = Israel Santana <isantana@redhat.com>
license = GPLv2+
version = 0.1.0

[options]
# packages = nevigato
include_package_data = True

[options.extras_require]
dev =
    tox
[tox:tox]
envlist = flake8,pylint,isort,pydocstyle,coverage

[testenv]
extras = dev

[testenv:flake8]
deps =
    flake8
commands = flake8 tests

[flake8]
exclude = .tox,build,dist,.eggs,venv,.venv
max-line-length = 100
per-file-ignores =
    nevigato/__init__.py:F401

[testenv:pylint]
deps =
    pylint
commands = pylint tests

[testenv:isort]
deps = isort
commands = isort --check --diff .

[testenv:pydocstyle]
deps = pydocstyle
commands = pydocstyle --match-dir='^(?!(\.|build|dist|venv|.venv)).*'

[testenv:coverage]
deps =
    pytest
    pytest-subtests
    pytest-cov
    coverage
commands =
  coverage run --branch -m pytest --junitxml=coverage/junit.xml --color=yes -v
  coverage report -m
  coverage html -d coverage/
  coverage xml -o coverage/coverage.xml
